# Smart-flowerpot

./: DOCUMENTATION.md  RAPORT DE ANALIZA.md  README.md  buffers_specification.json  postman_collection.json
project/: .gitignore  CMakeLists.txt  Makefile  a.out  json_specification.json
project/input/: input_app_config.json  input_stop_smart_pot.json  input_water_flower.json  sd_card.txt
project/output/: did_you_know_that.txt  monitor_logs.txt  music_play.txt  notification_center_logs.txt
project/src/: AppHardwareHandler.cpp  AppHttpHandler.cpp  FlowerEnvironment.cpp  MqttClientHandler.cpp  NotificationCenter.cpp  SmartPot.cpp  main.cpp
project/src/include/: AppHardwareHandler.h  AppHttpHandler.h  FlowerEnvironment.h  MqttClientHandler.h  NotificationCenter.h  SmartPot.h  app_config.h
